# typst4janim

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: profile.rs
src/: lib.rs
src/collect/: bezier.rs  image.rs  mod.rs  path.rs  shape.rs  text.rs  utils.rs  warnings.rs
src/typst/: fonts.rs  mod.rs  packages.rs  terminal.rs  world.rs
